--- a/_posts/2017-2-9-srccon2017.md
+++ b/_posts/2017-2-9-srccon2017.md
@@ -7,8 +7,8 @@ tags: SRCCON
 excerpt: SRCCON will be back in 2017. We'll be returning to beautiful Minneapolis, Minnesota August 3 and 4.
 published: true
 ---
-<img src="/media/img/blog/origami.jpg" style="width: 100%;">
-<p class="caption" style="margin-top: 5px;">A group showing off their origami at a SRCCON Hobby Workshop.</p>
+<img src="/media/img/blog/mpls_groupshot.jpg" style="width: 100%;">
+<p class="caption" style="margin-top: 5px;">SRCCON 2015 inside the mothership in Minneapolis.</p>
 
 The fourth [SRCCON](https://www.srccon.org) brings us back to Minneapolis Minnesota on August 3-4. We will return to the McNamara Alumni Center in Minneapolis, Minnesota on the east bank of the University of Minnesota, where we held SRCCON in 2015. Get ready for two days of hands-on sessions building better newsroom code, culture, and process—together.
 
