updating link to survey

--- a/_posts/2017-3-2-NICAR.md
+++ b/_posts/2017-3-2-NICAR.md
@@ -14,7 +14,7 @@ We've got some stuff to share at NICAR too:
 
 * We've announced the call for proposal and ticket dates for [SRCCON](https://srccon.org/): the CFP opens on March 22 and closes April 7, and our ticket lottery opens April 26 and closes May 8 
 * We're sponsoring the NICAR Conversations track again this year, and you can find all the sessions on the NICAR schedule as well as in [this handy etherpad](https://public.etherpad-mozilla.org/p/opennews-2017-NICAR-conversations-schedule) (Thanks so much to track co-organizers Brittany Mayes and David Eads from NPR!)
-* We're going to release the results of the first news nerd survey on Thursday afternoon (thanks to all of you who contributed)
+* We're going to release the results of the [first news nerd survey](/blog/news-nerd-survey/) on Thursday afternoon (thanks to all of you who contributed)
 * We're releasing a field guide to open source in the newsroom (including contributions from more than 20 community members). You can find out all about the field guide at a NICAR Conversation on Friday at 10:15am, where Lindsay, Ryan, and Erin will facilitate a discussion about open source in journalism
 
 Plus, we're bringing 25 community members who received OpenNews [Ticket+Travel Scholarships](/what/community/scholarships) to attend NICAR and our [2016 Knight-Mozilla Fellows](/what/fellowships/2016meet). We're excited to be in town as well! Feel free to ping [Erika](mailto:erika@opennews.org), [Ryan](ryan@opennews.org), [Erin](erin@opennews.org), or [Lindsay](lindsay@opennews.org) or wave us down and say hi. Dan [sends his regrets and best wishes](https://twitter.com/dansinker/status/836998256345366528) from Chicago. You can also tweet [@OpenNews](https://twitter.com/opennews), [@Source](https://twitter.com/source), or [@SRCCON](https://twitter.com/SRCCON) if you want to reach us as well.
