--- a/_posts/2017-08-02-srccon-2017-care.md
+++ b/_posts/2017-08-02-srccon-2017-care.md
@@ -7,8 +7,8 @@ tags: SRCCON
 excerpt: We're back in Minneapolis for two days of amazing collaborative sessions, and a lot of supporting one another.
 
 ---
-<img src="/media/img/blog/hhba2016.jpg" style="width: 100%;">
-<p class="caption" style="margin-top: 5px;">At events like the Hacks/Hackers Buenos Aires Media Party, participants become friends so quickly that they'll even stand in the rain together for photos. (photo/ramiro c.)</p>
+<img src="/media/img/blog/news-nerd-brainstorm-srccon2015.jpg" style="width: 100%;">
+<p class="caption" style="margin-top: 5px;">Like SRCCON 2015, we're back in this light-filled room with plenty of chances to collaborate via post its and connect in many other ways.</p>
 
 As news nerds assemble in Minneapolis for [SRCCON](https://srccon.org), we’re excited about this year’s conference and a bit reflective. The last year has been tough for many in our community. Many of us have barely been sleeping with the unending new cycles. Many in our industry and newsrooms are in increasingly precarious places. For some of us this has been a difficult year for personal, family, or health reasons. It has been tough year.
 
