--- a/_posts/2017-08-02-srccon-2017-care.md
+++ b/_posts/2017-08-02-srccon-2017-care.md
@@ -7,12 +7,12 @@ tags: SRCCON
 excerpt: We're back in Minneapolis for two days of amazing collaborative sessions, and a lot of supporting one another.
 
 ---
-<img src="/media/img/blog/news-nerd-brainstorm-srccon2015.jpg" style="width: 100%;">
+<img src="/media/img/news-nerd-brainstorm-srccon2015.jpg" style="width: 100%;">
 <p class="caption" style="margin-top: 5px;">Like SRCCON 2015, we're back in this light-filled room with plenty of chances to collaborate via post its and connect in many other ways.</p>
 
 As news nerds assemble in Minneapolis for [SRCCON](https://srccon.org), we’re excited about this year’s conference and a bit reflective. The last year has been tough for many in our community. Many of us have barely been sleeping with the unending new cycles. Many in our industry and newsrooms are in increasingly precarious places. For some of us this has been a difficult year for personal, family, or health reasons. It has been tough year.
 
-And for many industry events, you have to push all that away and put on a professional face. To ignore the fact that you are the only person of color, woman, or queer person representing your team. That is not what SRCCON is for. At OpenNews, our job is to create spaces for journalists to collaborate and share with one another. We take proactive steps to create a space that is inviting. We hope that at its most successful, it allows you to bring your whole self into this community because we know that we can't take care of ourselves and each other if we can't speak openly, if we don't see ourselves represented, if we're constantly in a position where we feel we have to defend our very humanity. 
+And for many industry events, you have to push all that away and put on a professional face. To ignore the fact that you are the only person of color, woman, or queer person representing your team. To pretend that our work and our identities are separable.  That is not what SRCCON is for. At OpenNews, our job is to create spaces for journalists to collaborate and share with one another. We take proactive steps to create a space that is inviting. We hope that at its most successful, it allows you to bring your whole self into this community because we know that we can't take care of ourselves and each other if we can't speak openly, if we don't see ourselves represented, if we're constantly in a position where we feel we have to defend our very humanity. 
 
 That is why we think about who comes to SRCCON and [what topics are covered](http://schedule.srccon.org), so that you won't be alone with your perspectives or questions. We emphasize collaboration and support so you can build new connections and friendships. This week, we come together to learn, celebrate, and strategize. To talk about what sustains us and our ability to do journalism that informs, strengthens our communities, and creates equity. We’ve also made space for literal fun and games, sunshine (we hope!) and good food, with a Thursday evening program focused on the things that nourish us whether that be a tabletop game or skateboard. It’s not just strategies for overcoming challenges that keep us going, but community and connection over a meal and on a park bench. We come together to raise each other up. 
 
