--- a/_posts/2018-12-27-year-review-2018.md
+++ b/_posts/2018-12-27-year-review-2018.md
@@ -8,8 +8,8 @@ excerpt: Looking back on the year and the importance of our work with a <a href=
 published: true
 ---
 
-<img src="/media/img/srccon_power_email_head.jpg" style="width: 100%;" alt="Philadelphia skyline at night">
-<p class="caption" style="margin-top: 5px;">We gathered in Philly for <a href="https://power.srccon.org">SRCCON:POWER</a>.</p>
+<img src="/media/img/blog/srccon18-convo.jpg" style="width: 100%;" alt="people chatting during a session at SRCCON 2018">
+<p class="caption" style="margin-top: 5px;">In conversation during a session at SRCCON 2018. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
 
 OpenNews exists to support the network of leaders pushing for technical and cultural change in newsrooms. We heard from network members throughout the year about how critical our work is to helping them navigate career paths and push for more equitable, inclusive oragnizations. As we wrap 2018, we're looking back on a busy year and [requesting your donations to support this work and this network](https://opennews.networkforgood.com/).
@@ -18,16 +18,16 @@ OpenNews exists to support the network of leaders pushing for technical and cult
 A core value of how we work is the importance of bringing people together because a network of peers is able to do amazing things when they're given support and space to connect with one another. Throughout this year we heard from so many community members about how this network sustains their work, and how the resources and support they access through it enrich their journalism and careers. In connecting to spaces and accessing resources, this year we:
 
 * Brought 19 journalists from around the world [to NICAR in Chicago](https://opennews.org/blog/NICAR18/), where we also co-sponsored an alcohol-free party and helped the Lonely Coders Club and Journalists of Color Slacks convene for group meals. Our [Ticket+Travel scholarship](https://opennews.org/what/community/scholarships) also helped community members attend other events this year including: SND, NABJ Convention, AAJA's Executive Leadership Program, and the 20th Annual Mass Communication Conference at Grambling State University.
-* Shared findings from [interviews with "local coders,"](https://source.opennews.org/articles/what-local-coders-can-tell-us-about-our-industry/) demonstrating the importance of network connection and support in enabling technologists at local and regional publications to do data reporting and serve as a tech resource in their newsrooms. These interviews were part of our [News Nerd Survey](https://opennews.org/blog/news-nerd-survey-2017) project, which was mentioned from the NICAR lightning talk stage a couple of times. We shared results from the survey with other journalists at the JSK Fellowship, CPJ, Pew, and more.
+* Shared findings from [interviews with "local coders,"](https://source.opennews.org/articles/what-local-coders-can-tell-us-about-our-industry/) demonstrating the importance of network connection and support in enabling technologists at local and regional publications to do data reporting and serve as a tech resource in their newsrooms. These interviews were part of our [News Nerd Survey](https://opennews.org/blog/news-nerd-survey-2017), which was cited from the NICAR lightning talk stage. We shared results from the survey with other journalists at the JSK Fellowship, CPJ, Pew, and more.
 * Released the [Field Guide to Security Training in the Newsroom](https://source.opennews.org/articles/introducing-field-guide-security-newsroom/), to help those folks who everyone comes to with questions train their colleagues on best practices. We worked with a small set of newsrooms to pilot using the guide with their colleagues. And, bonus impact, Kevin O'Gorman, who co-led creation of the guide, has moved from the newsroom to the Freedom of the Press Foundation to help journalists around the world implement SecureDrop.
-* Brought back the [journalism tech unconference](https://opennews.org/what/conferences/mozfest) to the MozFest House in London. With space for conversation between technical journalists from around London, folks chatted about workflows, templates, and tooling, and made plans for continued collaboration.
+* Brought back the [journalism tech unconference](https://opennews.org/what/conferences/mozfest) to the MozFest House in London. With space for connection between technical journalists from around London, folks discussed workflows, templates, and tooling, and made plans for continued collaboration.
 
 
 ## "No other organization is doing so much to reshape news culture for the better."
 As folks have had more opportunities to connect, conversations turn from technology to culture and the work that news organizations must do to create a more inclusive, equitable, and respectful journalism culture. We support these calls for change by convening spaces for individuals to share strategies and plans, and we also share our planning expertise with other organizations to build their own capacity to create inclusive spaces. In 2018 we:
 
 * Hosted our fifth SRCCON, where sessions delved into how we [engage communities](https://srccon.org/transcripts/SRCCON2018-blind-spots-coverage), [organize our teams](https://srccon.org/transcripts/SRCCON2018-kickoff-kit/), and [plan for the future](https://srccon.org/transcripts/SRCCON2018-archiving-news-websites). And in a serendipitous bit of impact, our coffee station host turned up later this year as the homepage illustrator for [The Force Report](http://force.nj.com/), having met the NJ Advance Media team at SRCCON. Throughout the rest of the year, we also heard about other folks who found new jobs, collaborators, and tons of new ideas over those two days.
-* Held three small workshops with journalists of color leading a variety of efforts in this community to better understand their needs and identify ways we can better support and connect their work. These workshops inspired several SRCCON:POWER sessions and helped [focus our efforts of community support](https://opennews.org/blog/srccon-power-forward/).
+* Held three small workshops with journalists of color who are leading efforts in this community to better understand their needs and identify ways we can better support and connect their work. These workshops inspired several SRCCON:POWER sessions and helped [focus our efforts of community support](https://opennews.org/blog/srccon-power-forward/).
 * Entered into paid consulting. Ryan Pitts' penchant for detail and documentation-driven planning work allowed us to share our event planning expertise with [WordCamp for Publishers](https://twitter.com/wcpublishers/), running their scholarship program, and [The Data Institute](https://projects.propublica.org/graphics/ida-propublica-data-institute#summer-home) from Ida B. Wells Society and ProPublica, ensuring that participants had a smooth and welcoming experience throughout the two-week program.
 
 
@@ -43,4 +43,4 @@ We bring people together, link them up with resources, support them in pushing f
 
 * Hosted SRCCON:POWER, where 125 community members [delved into so many dimensions of how power informs our work](https://opennews.org/blog/srccon-power-reflect/), and created plans for how to shift conditions in their news organizations.
 
-And as a movement made up by its members, we [rely on the support of this community](https://opennews.networkforgood.com/) to lead and power everything that we do. At the end of the year, we have a request for [any financial contribution](https://opennews.networkforgood.com/) you have the capacity to share. We're so grateful for the immense generosity of this community, financially but also with time, questions, critiques, support, emoji hearts and high fives, and more. We've got a lot of work ahead in 2019, and you can know we've heard you loud and clear: "Our field needs you and needs this." Your support ensures the momentum of this movement is only beginning.
+And as a movement made up by its members, we [rely on the support of this community](https://opennews.networkforgood.com/) to lead and power everything that we do. At the end of the year, we have a request for [any financial contribution](https://opennews.networkforgood.com/) you have the capacity to share. We're so grateful for the immense generosity of this community, financially but also with time, questions, critiques, support, emoji hearts and high fives, and more. We've got a lot of work ahead in 2019, and you can know we've heard you loud and clear: "Our field needs you and needs this." Your support ensures the momentum of this movement cotinues to build.
