adjusting field guide attribution

--- a/_posts/2018-12-27-year-review-2018.md
+++ b/_posts/2018-12-27-year-review-2018.md
@@ -19,7 +19,7 @@ A core value of how we work is the importance of bringing people together becaus
 
 * Brought 19 journalists from around the world [to NICAR in Chicago](https://opennews.org/blog/NICAR18/), where we also co-sponsored an alcohol-free party and helped the Lonely Coders Club and Journalists of Color Slacks convene for group meals. Our [Ticket+Travel scholarship](https://opennews.org/what/community/scholarships) also helped community members attend other events this year including: SND, NABJ Convention, AAJA's Executive Leadership Program, and the 20th Annual Mass Communication Conference at Grambling State University.
 * Shared findings from [interviews with "local coders,"](https://source.opennews.org/articles/what-local-coders-can-tell-us-about-our-industry/) demonstrating the importance of network connection and support in enabling technologists at local and regional publications to do data reporting and serve as a tech resource in their newsrooms. These interviews were part of our [News Nerd Survey](https://opennews.org/blog/news-nerd-survey-2017), which was cited from the NICAR lightning talk stage. We shared results from the survey with other journalists at the JSK Fellowship, CPJ, Pew, and more.
-* Released the [Field Guide to Security Training in the Newsroom](https://source.opennews.org/articles/introducing-field-guide-security-newsroom/), to help those folks who everyone comes to with questions train their colleagues on best practices. We worked with a small set of newsrooms to pilot using the guide with their colleagues. And, bonus impact, Kevin O'Gorman, who co-led creation of the guide, has moved from the newsroom to the Freedom of the Press Foundation to help journalists around the world implement SecureDrop.
+* Released the [Field Guide to Security Training in the Newsroom](https://source.opennews.org/articles/introducing-field-guide-security-newsroom/), to help those folks who everyone comes to with questions train their colleagues on best practices. We worked with a small set of newsrooms to pilot using the guide with their colleagues. And, bonus impact, Kevin O'Gorman, who worked with Amanda Hickman and Ryan Pitts to release the guide, has moved from the newsroom to the Freedom of the Press Foundation to help journalists around the world implement SecureDrop.
 * Brought back the [journalism tech unconference](https://opennews.org/what/conferences/mozfest) to the MozFest House in London. With space for connection between technical journalists from around London, folks discussed workflows, templates, and tooling, and made plans for continued collaboration.
 
 
