--- a/_posts/2018-12-27-year-review-2018.md
+++ b/_posts/2018-12-27-year-review-2018.md
@@ -43,4 +43,4 @@ We bring people together, link them up with resources, support them in pushing f
 
 * Hosted SRCCON:POWER, where 125 community members [delved into so many dimensions of how power informs our work](https://opennews.org/blog/srccon-power-reflect/), and created plans for how to shift conditions in their news organizations.
 
-And as a movement made up by its members, we [rely on the support of this community](https://opennews.networkforgood.com/) to lead and power everything that we do. At the end of the year, we have a request for [any financial contribution](https://opennews.networkforgood.com/) you have the capacity to share. We're so grateful for the immense generosity of this community, financially but also with time, questions, critiques, support, emoji hearts and high fives, and more. We've got a lot of work ahead in 2019, and you can know we've heard you loud and clear: "Our field needs you and needs this." Your support ensures the momentum of this movement cotinues to build.
+And as a movement made up by its members, we [rely on the support of this community](https://opennews.networkforgood.com/) to lead and power everything that we do. At the end of the year, we have a request for [any financial contribution](https://opennews.networkforgood.com/) you have the capacity to share. We're so grateful for the immense generosity of this community, financially but also with time, questions, critiques, support, emoji hearts and high fives, and more. We've got a lot of work ahead in 2019, and you can know we've heard you loud and clear: "Our field needs you and needs this." Your support ensures the momentum of this movement continues to build.
