update srccon post

--- a/_posts/2019-04-03-srccon-2019-launch.md
+++ b/_posts/2019-04-03-srccon-2019-launch.md
@@ -21,7 +21,7 @@ In preparing for this year's event, I went back and looked over some of our [amp
 * with the help of [sponsors](https://srccon.org/sponsors) and [community supporters](https://opennews.networkforgood.com/), we've provided [scholarships](https://srccon.org/scholarships) to **193** participants.
 * over the course of five SRCCONs, and SRCCON:WORK and SRCCON:POWER, we've welcomed **1,400** participants, with a healthy mix of new and returning attendees each time.
 
-Through these sessions, we see how much this community supports one another and pushes each other to implement more inclusive policies, and do more sustainable and interesting work. We can't wait to see what you want to dig into at this year's SRCCON, which brings us to some updates in the process.
+Through these events, we see how much this community supports one another and pushes each other to implement more inclusive policies, and do more sustainable and interesting work. We can't wait to see what you want to dig into at this year's SRCCON, which brings us to some updates in the process.
 
 ## Continuing with the single CFP form
 
@@ -33,7 +33,7 @@ Key dates:
 * **April 24**: the call for participation form for sessions and scholarships closes
 * **May 10**: date by which participants will be notified
 
-Again, the CFP form will be the place for you to propose a session, apply to attend, request a scholarship, and tell us any other way that you'd like to participate! April 24 is the deadline for all session propoals and scholarship requests. As space allows, we will keep the CFP open past the deadline for applications to attend _only_. After that point we will review applications to attend on a rolling basis, so if you want to be sure you can attend SRCCON, your best bet is to apply before the April 24 deadline. Reviewing applications to attend allows us to be intentional about equitably distributing tickets and ensuring that there are a mix of perspectives and skills at SRCCON. The [form will be very similar to last year](/blog/srccon-participation-howto/) and we'll be available throughout the CFP to answer any questions and support you in pitching sessions you'd love to lead and sharing how you'd like to participate!
+Again, the CFP form will be the place for you to propose a session, apply to attend, request a scholarship, and tell us any other way that you'd like to participate! April 24 is the deadline for all session proposals and scholarship requests. As space allows, we will keep the CFP open past the deadline for applications to attend _only_. After that point we will review applications to attend on a rolling basis, so if you want to be sure you can attend SRCCON, your best bet is to apply before the April 24 deadline. Reviewing applications to attend allows us to be intentional about equitably distributing tickets and ensuring that there are a mix of perspectives and skills at SRCCON. The [form will be very similar to last year](/blog/srccon-participation-howto/) and we'll be available throughout the CFP to answer any questions and support you in pitching sessions you'd love to lead and sharing how you'd like to participate!
 
 ## A new approach to ticket prices
 
@@ -53,6 +53,6 @@ These tiers will be shared on an honor system. We'll ask attendees to pick the t
 
 ## Start your travel planning now!
 
-As you're thinking about attending SRCCON this year, we encourage you to look at your travel plans a little earlier than usual. We'll let folks know about their sessions and tickets by May 10 to give you plenty of time to book flights. As a heads up, there will be a large event in Minneapolis that week so we've already booked a block at a nearby hotel. We'll share details about that along with ticket information, but just know that things might sell out or go up in price more quickly than in the past. If you need any information to put in budget requests for professional development support or anything like that, please [just let us know](mailto:srccon@opennews.org). We want to make it as easy to attend as possible. If you've been wanting to attend SRCCON for a while, let this be your year! The form opens April 10 and we can't wait to hear from you.
+As you're thinking about attending SRCCON this year, we encourage you to look at your travel plans a little earlier than usual. We'll let folks know about their sessions and tickets by May 10 to give you plenty of time to book flights. As a heads up, there will be a large event in Minneapolis that week so we've already booked a block at a nearby hotel for $169/night plus taxes. We'll share details about that along with ticket information, but just know that things might sell out or go up in price more quickly than in the past. If you need any information to put in budget requests for professional development support or anything like that, please [just let us know](mailto:srccon@opennews.org). We want to make it as easy to attend as possible. If you've been wanting to attend SRCCON for a while, let this be your year! The form opens April 10 and we can't wait to hear from you.
 
 SRCCON 2019 will take place once again in Minneapolis on July 11 & 12, and we're excited to share updates on the process for this year's event. 
