--- a/_posts/2020-06-17-srccon-2020-cfp.md
+++ b/_posts/2020-06-17-srccon-2020-cfp.md
@@ -41,7 +41,7 @@ Sound interesting? [Let us know you'd like to be there](https://2020.srccon.org/
 
 We keep SRCCON events intentionally small, and this online event will be no different. We’re planning for about 300 participants. Even though a physical venue isn’t constraining the size of the crowd this year, the collaborative, interactive nature of SRCCON just doesn’t scale in the same way a talks-only conference can. The relatively small size of SRCCON 2020 means we need to be intentional about equitably distributing tickets and ensuring that there are a mix of perspectives and skills at SRCCON 2020. 
 
-We are going to review the call for participation forms on a rolling basis, and within a few business days we will let people know whether they will be invited to attend. If invited, you will have the chance to purchase a ticket starting at $125 plus fees. Last year we began experimenting with a tiered ticket-pricing system. Accessibility remains a core value for us, and this is our attempt to balance the actual costs of our events with keeping prices as manageable for attendees as possible. We adjusted our pricing structure a bit in response to going virtual this year and are offerring tiers of $125, $275, and $450, plus a free scholarship tier. We have a limited number of free [scholarship tickets](https://2020.srccon.org/scholarships) set aside for people who otherwise would not be able to attend, with priority for Black, indigenous, and people of color journalists.
+We are going to review the call for participation forms on a rolling basis, and within a few business days we will let people know whether they will be invited to attend. If invited, you will have the chance to purchase a ticket starting at $125 plus fees. Last year we began experimenting with a tiered ticket-pricing system. Accessibility remains a core value for us, and this is our attempt to balance the actual costs of our events with keeping prices as manageable for attendees as possible. We adjusted our pricing structure a bit in response to going virtual this year and are offerring tiers of $125, $275, and $450, plus a free scholarship tier. We have a limited number of free [scholarship tickets](https://2020.srccon.org/scholarships) set aside for people who otherwise would not be able to attend, with priority for Black journalists, Indigenous journalists, and journalists of color.
 
 Here’s the most important thing to know about these ticket prices: _We want you to choose the one that makes sure you can be at SRCCON 2020_. We don’t review who pays what, and we won’t follow up with any questions. If you work for an organization where budgets have already been set or there’s not support available to you, choose a lower price and join us. By the same token, if you budgeted for travel costs you no longer have to spend and are able to purchase a ticket at a higher tier, please do. In addition, if you would like to pay for someone else’s ticket, email us and we have a process to make it happen.
 
