removing tracking of .rubyversion and adding image link

--- a/_posts/2021-12-21-year-end-power-2021.md
+++ b/_posts/2021-12-21-year-end-power-2021.md
@@ -5,7 +5,7 @@ date: 2021-12-21 16:00-04:00
 author: <a href="http://opennews.org/who/">Erika Owens</a> and <a href="http://opennews.org/who/">Sisi Wei</a>, on Dec. 21, 2021
 tags: OpenNews, SRCCON
 excerpt: Journalists, with tech skills especially, hold a tremendous amount of power, and through OpenNews and other change-focused networks, we’re constructing a shared understanding of how to wield that power.
-image: 
+image: /media/img/blog/2021-12-21-power-as-workers.png
 ---
 
 <img src="/media/img/blog/2021-12-21-power-as-workers.png" style="width: 100%;" alt="tk"> 
