--- a/_posts/2021-12-21-year-end-power-2021.md
+++ b/_posts/2021-12-21-year-end-power-2021.md
@@ -1,15 +1,11 @@
 ---
-layout: blogpost
-title: Understanding our power as workers, storytellers, and leaders in 2021
+layout: blogpost_noimage
+title: What we did together in 2021&#58; Understanding our collective power and ways to wield it
 date: 2021-12-21 16:00-04:00
 author: <a href="http://opennews.org/who/">Erika Owens</a> and <a href="http://opennews.org/who/">Sisi Wei</a>, on Dec. 21, 2021
 tags: OpenNews, SRCCON
 excerpt: Journalists, with tech skills especially, hold a tremendous amount of power, and through OpenNews and other change-focused networks, we’re constructing a shared understanding of how to wield that power.
-image: /media/img/blog/2021-12-21-power-as-workers.png
 ---
-
-<img src="/media/img/blog/2021-12-21-power-as-workers.png" style="width: 100%;" alt="tk"> 
-<p class="caption" style="margin-top: -15px; text-align: left;"></p> 
 
 As we approach the end of another unexpected year, we did so exactly how you’d expect: in community. During [our last community call](https://etherpad.opennews.org/p/communitycall-Dec16) of the year, we shared appreciations for what we’ve accomplished and movie recommendations, alongside what we hope to do together in the new year. We also validated our shared exhaustion — if you are really this and feeling exhausted, please know you are far from alone, and so many of us currently feel this way too. Before we all (hopefully🤞🏼) take some time for rest, we want to take a moment to reflect on 2021.
 
