update links in scholarships post

--- a/_posts/2022-01-26-scholarships-2022.md
+++ b/_posts/2022-01-26-scholarships-2022.md
@@ -7,7 +7,7 @@ tags: OpenNews, Scholarships
 excerpt: If you're a journalist who works with data or code, our scholarships can help you pay for programs that advance your career and develop your support network. The first round of applications for this year opens January 31, 2022.
 ---
 
-Our [Scholarships+ program](/what/community/scholarships/) is back for 2022, to help you find and attend programs that take your career down the paths you’re most excited about. If you already know about something you want to learn this year, our application form will be open January 31-February 11. If you’d like to hear some ideas about how you could use scholarship funds (and how this program can broaden your network in journalism), read on!
+Our [Scholarships+ program](/what/community/scholarships/) is back for 2022, to help you find and attend programs that take your career down the paths you’re most excited about. If you already know about something you want to learn this year, [our application form will be open January 31-February 11](/what/community/scholarships/). If you’d like to hear some ideas about how you could use scholarship funds (and how this program can broaden your network in journalism), read on!
 
 ### How you can use our Scholarships+ program in 2022
 
@@ -27,8 +27,8 @@ In 2021, Scholarships+ participants used stipends to take part in:
 
 ### We want to give you money in 2022 (and other orgs do, too!)
 
-Our [scholarship applications](/what/community/scholarships/) open soon, and we’re not the only ones who want to help you get to events!
+Our [scholarship applications](/what/community/scholarships/) ask a few questions about how you'd like to use a stipend, and we don't ask for any followup beyond some quick feedback about how everything went. And we’re not the only ones who want to help you get to events!
 
 Conferences, workshops, and other support organizations like us often build in financial aid to make professional development more accessible. If you’re thinking about attending NICAR this year, for example, there’s [a fellowship program just for that event](https://www.ire.org/training/conferences/nicar-2022/nicar22-fellowships/), open through January 31. You should apply! And as you encounter other opportunities, [please let us know](mailto:team@opennews.org). We’d love to spread the word about those too.
 
-__Applications for the first round of Scholarships+ this year will be open January 31-February 11. If you'd like to get notifications about programs like this one, [Twitter](https://twitter.com/opennews) and [our newsletter](http://eepurl.com/czSVTL) are great ways to stay up-to-date.__
+__Applications for the first round of Scholarships+ this year will be [open January 31-February 11](/what/community/scholarships/). If you'd like to get notifications about programs like this one, [Twitter](https://twitter.com/opennews) and [our newsletter](http://eepurl.com/czSVTL) are great ways to stay up-to-date.__
