--- a/_posts/2022-12-20-2022-year-end.md
+++ b/_posts/2022-12-20-2022-year-end.md
@@ -18,11 +18,15 @@ As we wrap up 2022, let's take a look at the ways we showed up for each other an
 
 At [SRCCON 2022](http://2022.srccon.org) and [SRCCON:CARE](http://srccon.org/srccon-care-2022/), we had the chance to practice the world as we want it to be: co-creating inclusive spaces where we get to learn and grow together with peers. By learning from each other, we have the chance to reconsider how we do things, [as An Xiao Mina described](https://www.niemanlab.org/2022/12/journalism-in-a-time-of-permacrisis/). Participants at SRCCON 2022 shared concrete strategies on how to implement changes in our practice, on everything from [countering polarization in science reporting](https://source.opennews.org/articles/four-things-newsrooms-can-do-right-now-counter-sci/) to considering [security of sources when reporting on abortion](https://source.opennews.org/articles/source-security-reporting-abortion/). With SRCCON:CARE, participants shared [how care shows up](https://source.opennews.org/articles/how-we-take-care-highlights-srcconcare-participant/) in all areas of life and how to distribute networks of support and care. By stepping into different modes of leadership, whether it be facilitating a session, volunteering, asking a vulnerable question, or pulling together a support spreadsheet, community members demonstrated different ways to facilitate care and change making.
 
+<blockquote>"I’m very grateful this space exists. Thank you to the ideators, the organizers, the resource bearers, and the volunteers! It's really hard to carry the torch of care against the tides of this industry and its posture of reactivity that perpetuates crises."</blockquote>
+
 ## Strengthening networks, building skills
 
 Each time we get to learn together or collaborate is a chance to get to know each other better and fortify this growing network. One concrete way we help make that happen is through our [Scholarships+ program](/what/community/scholarships). We [gave out 52 stipends to journalists](https://source.opennews.org/articles/how-people-used-scholarships-program-2022/) to attend conferences, trainings, leadership development programs, and get focused 1-on-1 support. These learning opportunities are not only a way to build skills, but also a chance to form new relationships and share that all back with their networks. 
 
-In addition to supporting individual community members, in 2022, we got to intentionally build our relationships with peer organizations as well. With Vision 25, we got to collaborate on a number of events related to pay equity with the [Online News Association](https://ona22.journalists.org/sessions/vision25/) and [Maynard Institute](https://www.crowdcast.io/e/pay-equity-vision25-media-2070?utm_source=profile&utm_medium=profile_web&utm_campaign=profile) (with Aspiration Tech's facilitation support). We also got to work together with the News Product Alliance on another amazing [NPA Summit](http://newsproduct.org/summit) as part of our [consulting practice](https://opennews.org/hire-us). We love how this is another area where our flair for facilitation shows up: helping people design what they want and get what they need.
+In addition to supporting individual community members, in 2022, we got to intentionally build our relationships with peer organizations as well. With Vision 25, we got to collaborate on a number of events related to pay equity with the [Online News Association](https://ona22.journalists.org/sessions/vision25/) and [Maynard Institute](https://www.crowdcast.io/e/pay-equity-vision25-media-2070?utm_source=profile&utm_medium=profile_web&utm_campaign=profile) (with Aspiration Tech's facilitation support). We also got to work together with the News Product Alliance on another amazing [NPA Summit](http://newsproduct.org/summit), the Ida B. Wells Society and ProPublica on another fantastic (virtual) [Data Institute](https://projects.propublica.org/graphics/data-institute-2022#), and the Center for Public Integrity and Tara Health Foundation on an exciting new [event about reporting on working-class women](https://source.opennews.org/articles/stop-victim-narrative-and-other-tips-covering-work/) as part of our [consulting practice](https://opennews.org/hire-us). We love how this is another area where our flair for facilitation shows up: helping people design what they want and get what they need.
+
+<blockquote>"This is my first SRCCON, and you've all made me feel so welcomed and part of the conversation, even as someone who is not-exactly-a-journalist-but-works-with-journalists-and-cares-about-journalism.  This is the best professional event I've ever attended and I am just overwhelmed with the joy and love of it all."</blockquote>
 
 ## Turning learning into action
 
